Fixed admin page reservation form repetition field's number button overflow. (#89)

--- a/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
+++ b/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
@@ -15,7 +15,7 @@
     margin-bottom: $form-group-margin-bottom;
   }
   .react-numeric-input {
-    padding: 10px 0;
+    padding: 9px 0 0 0;
     margin-top: 4px;
   }
   label {
